[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "run-one"
version = "1.0.9"
description = "Tool for parsing matrix files, extracting actions and processing them according to user defined logic"
authors = ["TH2-devs <th2-devs@exactprosystems.com>"]
readme = "README.md"
license = "Apache License 2.0"
homepage = "https://github.com/th2-net/run-one"
repository = "https://github.com/th2-net/run-one"
packages = [
    {include = 'run_one'},
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
pyyaml = "^6.0"
th2-common = "^4"
th2-grpc-act-template = "^4.0.1"
th2-grpc-check1 = "^4.1.1"
th2-grpc-act-ssh = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "*"