[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "run-one"
version = "1.2.9"
description = "Tool for parsing matrix files, extracting actions and processing them according to user defined logic"
authors = ["TH2-devs <th2-devs@exactprosystems.com>"]
readme = "README.md"
license = "Apache License 2.0"
homepage = "https://github.com/th2-net/run-one"
repository = "https://github.com/th2-net/run-one"
packages = [
    {include = 'run_one'},
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
th2-common = {version = "^4", optional = true}
th2-grpc-act-template = {version = "^4.0.1", optional = true}
th2-grpc-check1 = {version = "^4.1.1", optional = true}
th2-grpc-act-ssh = {version = "^2", optional = true}

[tool.poetry.extras]
th2 = ["th2-common", "th2-grpc-act-template", "th2-grpc-check1", "th2-grpc-act-ssh"]

[tool.poetry.group.test.dependencies]
pytest = "*"